<resources>
    <string name="app_name">The Alphametrica</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stay_on_the_top_of_your_finance">Stay on the top of your finance</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam</string>
    <string name="login">로그인</string>
    <string name="sign_up">계정이 없으신가요? 가입하기</string>
    <string name="welcome">"Welcome !"</string>
    <string name="register_fragment">RegisterFragment</string>
    <string name="prompt_email">Email</string>
    <string name="sabahat_gmail_com">sabahat@gmail.com</string>
    <string name="password">비밀번호</string>
    <string name="aestric_password">********</string>
    <string name="forget_password">비밀번호 찾기</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="sign_up_in_short">회원가입</string>
    <string name="name">이름</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="date_of_birth">생년월일</string>
    <string name="re_password">비밀번호 확인</string>
    <string name="atleast_eight_character">최소 8자 이상</string>
    <string name="atleast_one_uppercase">최소 하나의 대문자</string>
    <string name="atleast_one_number">최소 하나의 숫자</string>
    <string name="special_character">최소 하나의 특수문자</string>
    <string name="terms_and_condition">이용약관에 동의합니다</string>
    <string name="dummy_phone_number">+82 111 111111</string>
    <string name="dob_hint">mm - dd - yyyy</string>
    <string name="hint_email">john.doe@alphametics.com</string>
</resources>