<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/WelcomeFragment">

    <fragment
        android:id="@+id/WelcomeFragment"
        android:name="com.xavi.thealphametrica.fragments.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/navigate_to_Login"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/navigate_to_Register"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:destination="@id/RegisterFragment" />
    </fragment>
    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.xavi.thealphametrica.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_RegisterFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:destination="@id/RegisterFragment" />
    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.xavi.thealphametrica.fragments.RegisterFragment"
        android:label="@string/register_fragment"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_RegisterFragment_to_LoginFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@+id/WelcomeFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:destination="@id/LoginFragment" />
    </fragment>
</navigation>