<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="newUserViewModel"
            type="com.xavi.thealphametrica.viewModel.NewUserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".RegisterFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="414px">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="38dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/gradation" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/sign_up_in_short"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/underline_text"
                    android:ems="10"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    android:text="@={newUserViewModel.Name}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/underline_text"
                    android:ems="10"
                    android:hint="@string/dummy_phone_number"
                    android:inputType="phone"
                    android:text="@={newUserViewModel.PhoneNumber}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextPhone"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/underline_text"
                    android:ems="10"
                    android:hint="@string/dob_hint"
                    android:inputType="date"
                    android:text="@={newUserViewModel.DOB}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/prompt_email"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextDate"
                    app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/underline_text"
                    android:ems="10"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:text="@={newUserViewModel.EmailAddress}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    app:layout_constraintEnd_toEndOf="@+id/editTextDate"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/underline_text"
                    android:ems="10"
                    android:hint="@string/aestric_password"
                    android:inputType="textPassword"
                    android:text="@={newUserViewModel.Password}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/re_password"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

                <EditText
                    android:id="@+id/editTextTextPassword2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/underline_text"
                    android:ems="10"
                    android:hint="@string/aestric_password"
                    android:inputType="textPassword"
                    android:text="@={newUserViewModel.RePassword}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <CheckBox
                    android:id="@+id/checkBox"
                    style="@style/CustomCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:checked="@{newUserViewModel.set8char}"
                    android:clickable="false"
                    android:text="@string/atleast_eight_character"
                    android:textColor="@color/text_hint"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    style="@style/CustomCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="@{newUserViewModel.setOneUpperCase}"
                    android:clickable="false"
                    android:text="@string/atleast_one_uppercase"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text_hint"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    style="@style/CustomCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checked="@{newUserViewModel.setOneNumber}"
                    android:clickable="false"
                    android:text="@string/atleast_one_number"
                    android:textColor="@color/text_hint"
                    app:layout_constraintStart_toStartOf="@+id/checkBox"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    style="@style/CustomCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checked="@{newUserViewModel.setSpecialChar}"
                    android:clickable="false"
                    android:text="@string/special_character"
                    android:textColor="@color/text_hint"
                    app:layout_constraintStart_toStartOf="@+id/checkBox2"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:checked="@={newUserViewModel.agreeTermsAndCondition}"
                    android:text="@string/terms_and_condition"
                    android:textAlignment="viewStart"
                    android:buttonTint="@color/button_color"
                    android:textColor="@color/text_hint"
                    app:layout_constraintEnd_toEndOf="@+id/checkBox4"
                    app:layout_constraintStart_toStartOf="@+id/checkBox3"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

                <Button
                    android:id="@+id/register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:onClick="@{(v)->newUserViewModel.register(v)}"
                    android:text="@string/sign_up"
                    android:background="@color/button_color"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/checkBox4"
                    app:layout_constraintStart_toStartOf="@+id/checkBox3"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

                <TextView
                    android:id="@+id/signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/sign_up"
                    android:onClick="@{(v)->newUserViewModel.navigateToLogin(v)}"
                    android:textColor="@color/text_hint"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/register"
                    app:layout_constraintStart_toStartOf="@+id/register"
                    app:layout_constraintTop_toBottomOf="@+id/register"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>